--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@ div#display_wrapper{
 	margin: 56px auto 0 auto;
 }
 
+div#content-wrapper.nav-out{
+	margin-left: 25%;
+}
+
 h1,h2,h3,h4,h5{
 	font-family: 'Fjalla One', sans-serif;
 	color: #424242;
