--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ div#container-wrapper{
 
 div#display_wrapper{
 	width: 95%;
-	margin: 6% auto 0 auto;
+	margin: 46px auto 0 auto;
 	height: 100%;
 }
 div#content-wrapper{
