working on hiding / showing the main menu

--- a/css/main_menu.css
+++ b/css/main_menu.css
@@ -11,6 +11,9 @@
 	-webkit-box-shadow:inset -3px 0px 5px #000000;
 	box-shadow:inset -3px 0px 5px #000000;		
 	-webkit-transition: margin .5s;
+	-webkit-transform-style: flat;
+	-webkit-backface-visibility: hidden;
+	-webkit-perspective: 800;	
 }
 
 #main-menu.closed{
