--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html, body{
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 	background: #e1e1e1;
 	font-family: 'Helvetica';
 	font-weight: 200;
@@ -27,7 +27,11 @@ div#display_wrapper{
 	width: 95%;
 	margin: 44px auto 0px auto;
 	height: 100%;
+	-webkit-transform: translateZ(0);
 }
+	div#display_wrapper.lineup-view{
+		width: 100%;
+	}
 
 div#display_wrapper.lineup-listing{
 	margin-top: 55px;
